--- a/_includes/article-content.html
+++ b/_includes/article-content.html
@@ -2,7 +2,12 @@
 <!-- begin article -->
 <div class="article">
   <div class="container">
-
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1306355070136339"
+     data-ad-slot="6564940245"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
     <div class="article__wrapper">
 
         {% if post.image %}
@@ -23,7 +28,12 @@
           {% else %}
           {% endif %}
           </div>
-      
+      <ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1306355070136339"
+     data-ad-slot="6564940245"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
           <h2 class="article__title">
             <a href="{{ post.url | prepend: site.baseurl }}">{{post.title}}</a>
           </h2>
@@ -36,6 +46,12 @@
             </div>
 
             <a href="{{post.url | prepend: site.baseurl}}" class="read-more">Keep Reading <i class="ion ion-ios-arrow-forward"></i></a>
+          <ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1306355070136339"
+     data-ad-slot="6564940245"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
           </div>
 
         </div>
